tests/NormalTests/paczka1/fuzzy1/63353287.err
Error in line 4: yjtv9XbLBk S903 27,9
Error in line 8: GT5HDRPh S146 45,2
Error in line 15: YimCv S146 54,7
Error in line 10: yjtv9XbLBk S146 61,7
Error in line 19: GT5HDRPh A164 32,4
Error in line 31: ypybvClSk S484 1,4
Error in line 32: ypybvClSk A164 14,2
Error in line 34: ypybvClSk S903 30,6
Error in line 12: SiQy83fkEVp S484 231,6
